Update after Debian Jessie 8 release

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Magnetic field simulator.
 
-Debian Squeeze with Boost, OpenMP, ParaView
+Debian Jessie 8 with Boost, OpenMP, ParaView
 
 1/ make
 2/ export PYTHONPATH=/usr/lib/paraview
